--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="TUF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="widht=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
@@ -19,10 +19,10 @@
                     C
                 </button>
                 <button class="calc-button">
-                    &larr;
+                    ←
                 </button>
                 <button class="calc-button">
-                    &divide;
+                    ÷
                 </button>
             </div>
 
@@ -37,7 +37,7 @@
                     9
                 </button>
                 <button class="calc-button">
-                    &times;
+                    x
                 </button>
             </div>
 
@@ -52,7 +52,7 @@
                     6
                 </button>
                 <button class="calc-button">
-                    &minus;
+                    -
                 </button>
                 
             </div>
@@ -68,7 +68,7 @@
                     3
                 </button>
                 <button class="calc-button">
-                    &plus;
+                    +
                 </button>
             </div>
 
@@ -77,7 +77,7 @@
                     0
                 </button>
                 <button class="calc-button">
-                    &equals;
+                    =
                 </button>
             </div>
 
